[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://Textures/Coin.png" type="Texture" id=2]
[ext_resource path="res://Textures/TowerFireButtonNormal.png" type="Texture" id=3]
[ext_resource path="res://Textures/TowerFireButtonPressed.png" type="Texture" id=4]
[ext_resource path="res://Textures/TowerFireButtonHover.png" type="Texture" id=5]
[ext_resource path="res://Textures/TowerFireButtonDisabled.png" type="Texture" id=6]
[ext_resource path="res://Textures/TowerGrassButtonNormal.png" type="Texture" id=7]
[ext_resource path="res://Textures/TowerGrassButtonPressed.png" type="Texture" id=8]
[ext_resource path="res://Textures/TowerGrassButtonHover.png" type="Texture" id=9]
[ext_resource path="res://Textures/TowerGrassButtonDisabled.png" type="Texture" id=10]
[ext_resource path="res://Textures/TowerWaterButtonNormal.png" type="Texture" id=11]
[ext_resource path="res://Textures/TowerWaterButtonPressed.png" type="Texture" id=12]
[ext_resource path="res://Textures/TowerWaterButtonHover.png" type="Texture" id=13]
[ext_resource path="res://Textures/TowerWaterButtonDisabled.png" type="Texture" id=14]
[ext_resource path="res://Textures/LvlUpButtonNormal.png" type="Texture" id=15]
[ext_resource path="res://Textures/LvlUpButtonPressed.png" type="Texture" id=16]
[ext_resource path="res://Textures/LvlUpButtonHover.png" type="Texture" id=17]
[ext_resource path="res://Textures/LvlUpButtonDisabled.png" type="Texture" id=18]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 495.0
margin_bottom = 45.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
editor/display_folded = true
margin_right = 50.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 50.0
margin_bottom = 20.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/NinePatchRect"]
margin_right = 30.0
margin_bottom = 20.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 2
valign = 1

[node name="BuyTowers" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 182.0
margin_bottom = 40.0
alignment = 2

[node name="FireTowerButton" type="TextureButton" parent="MarginContainer/HBoxContainer/BuyTowers"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
expand = true

[node name="GrassTowerButton" type="TextureButton" parent="MarginContainer/HBoxContainer/BuyTowers"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 10 )
expand = true

[node name="WaterTowerButton" type="TextureButton" parent="MarginContainer/HBoxContainer/BuyTowers"]
margin_left = 88.0
margin_right = 128.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
texture_disabled = ExtResource( 14 )
expand = true

[node name="Updates" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
visible = false
margin_left = 186.0
margin_right = 490.0
margin_bottom = 40.0
size_flags_horizontal = 3
alignment = 2

[node name="Info2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Updates"]
editor/display_folded = true
margin_left = 90.0
margin_right = 140.0
margin_bottom = 40.0

[node name="Lvl" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Updates/Info2"]
editor/display_folded = true
margin_right = 50.0
margin_bottom = 14.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info2/Lvl"]
editor/display_folded = true
margin_left = 6.0
margin_right = 32.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info2/Lvl/MarginContainer2"]
margin_right = 26.0
margin_bottom = 14.0
text = "Lvl: "
align = 1
valign = 1

[node name="Var" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info2/Lvl"]
editor/display_folded = true
margin_left = 36.0
margin_right = 44.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info2/Lvl/Var"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 1
valign = 1

[node name="Dmg" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Updates/Info2"]
editor/display_folded = true
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info2/Dmg"]
editor/display_folded = true
margin_right = 38.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info2/Dmg/MarginContainer2"]
margin_right = 38.0
margin_bottom = 14.0
text = "Dmg: "
align = 1
valign = 1

[node name="Var" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info2/Dmg"]
margin_left = 42.0
margin_right = 50.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info2/Dmg/Var"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 1
valign = 1

[node name="Info1" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Updates"]
editor/display_folded = true
margin_left = 144.0
margin_right = 206.0
margin_bottom = 40.0

[node name="Speed" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Updates/Info1"]
editor/display_folded = true
margin_right = 62.0
margin_bottom = 14.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info1/Speed"]
editor/display_folded = true
margin_left = 1.0
margin_right = 48.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info1/Speed/MarginContainer2"]
margin_right = 47.0
margin_bottom = 14.0
text = "Speed: "
align = 1
valign = 1

[node name="Var" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info1/Speed"]
editor/display_folded = true
margin_left = 52.0
margin_right = 60.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info1/Speed/Var"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 1
valign = 1

[node name="Radius" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Updates/Info1"]
editor/display_folded = true
margin_top = 18.0
margin_right = 62.0
margin_bottom = 32.0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info1/Radius"]
editor/display_folded = true
margin_right = 50.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info1/Radius/MarginContainer2"]
margin_right = 50.0
margin_bottom = 14.0
text = "Radius: "
align = 1
valign = 1

[node name="Var" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/Info1/Radius"]
editor/display_folded = true
margin_left = 54.0
margin_right = 62.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/Info1/Radius/Var"]
margin_right = 8.0
margin_bottom = 14.0
text = "0"
align = 1
valign = 1

[node name="LvlUPInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer/Updates"]
margin_left = 210.0
margin_right = 260.0
margin_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/LvlUPInfo"]
editor/display_folded = true
margin_right = 50.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/LvlUPInfo/MarginContainer"]
margin_right = 50.0
margin_bottom = 14.0
text = "Cost:"
align = 1
valign = 1

[node name="Cost" type="MarginContainer" parent="MarginContainer/HBoxContainer/Updates/LvlUPInfo"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 38.0

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/Updates/LvlUPInfo/Cost"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 20 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Updates/LvlUPInfo/Cost/NinePatchRect"]
margin_right = 30.0
margin_bottom = 20.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Updates/LvlUPInfo/Cost/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 2
valign = 1

[node name="LvlUP" type="TextureButton" parent="MarginContainer/HBoxContainer/Updates"]
margin_left = 264.0
margin_right = 304.0
margin_bottom = 40.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
[connection signal="pressed" from="MarginContainer/HBoxContainer/BuyTowers/FireTowerButton" to="." method="_on_FireTowerButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/BuyTowers/GrassTowerButton" to="." method="_on_GrassTowerButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/BuyTowers/WaterTowerButton" to="." method="_on_WaterTowerButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Updates/LvlUP" to="." method="_on_LvlUP_pressed"]
